<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="upwork.com.revisedapp.SignupActivity">

    <ImageView
        android:id="@+id/checkicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background1"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="1dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="126dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="43dp"
        android:layout_marginTop="25dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkicon"
        android:layout_marginLeft="43dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="53dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="42dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/mark"
        tools:ignore="ContentDescription,RtlHardcoded"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="43dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="20dp"
        android:background="@color/buttoncolor"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />


    <TextView
        android:id="@+id/successregistered"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_success"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/checkicon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkicon"
        app:layout_constraintVertical_bias="0.45999998" />

        <LinearLayout
            android:id="@+id/signullayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/checkicon"
            app:layout_constraintBottom_toBottomOf="@+id/checkicon"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.39">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:textColor="@color/textcolor"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtcode"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:ems="6"
                        android:inputType="number"
                        android:text="" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/textcolor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtname"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="14"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textColor="@color/textcolor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtemail_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="14"
                android:inputType="textEmailAddress"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textColor="@color/textcolor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtpassword_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="7"
                android:inputType="textPassword"
                android:text="" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/checkin"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                app:buttonTint="@color/textcolor" />
        </LinearLayout>
</android.support.constraint.ConstraintLayout>
