<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="upwork.com.revisedapp.ForgetpasswordActivity">


    <ImageView
        android:id="@+id/checkicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background1"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="126dp"
            android:layout_height="81dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="43dp"
            android:layout_marginTop="25dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkicon"
            android:layout_marginLeft="43dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="53dp"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="43dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/mark"
            tools:ignore="ContentDescription,RtlHardcoded"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="43dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/checkicon"
        app:layout_constraintLeft_toLeftOf="@+id/checkicon"
        app:layout_constraintRight_toRightOf="@+id/checkicon"
        app:layout_constraintTop_toTopOf="@+id/checkicon"
        app:layout_constraintVertical_bias="0.43">

        <TextView
            android:id="@+id/inputemail"
            android:layout_width="213dp"
            android:layout_height="29dp"
            android:text="@string/email"
            android:textColor="@color/textcolor"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputemail"
            tools:layout_conversion_absoluteHeight="41dp"
            tools:layout_conversion_absoluteWidth="213dp"
            tools:layout_conversion_absoluteX="98dp"
            tools:layout_conversion_absoluteY="308dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendmail"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/buttoncolor"
                android:text="@string/sendmail"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/txtemail"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="84dp"
                tools:layout_conversion_absoluteX="227dp"
                tools:layout_conversion_absoluteY="350dp"
                tools:layout_editor_absoluteX="227dp"
                tools:text="@string/sendmail" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/successView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/checkicon"
        app:layout_constraintLeft_toLeftOf="@+id/checkicon"
        app:layout_constraintRight_toRightOf="@+id/checkicon"
        app:layout_constraintTop_toTopOf="@+id/checkicon"
        app:layout_constraintVertical_bias="0.44">

        <TextView
            android:id="@+id/successsentmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sent_mail_success"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="26sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/gotologin"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:background="@color/buttoncolor"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/successsentmail"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="84dp"
            tools:layout_conversion_absoluteX="227dp"
            tools:layout_conversion_absoluteY="350dp"
            tools:text="@string/login" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
