<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="upwork.com.revisedapp.StartViewActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="419dp"
        android:layout_height="669dp"
        android:contentDescription=""
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-3dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="@+id/btt_map"
        app:layout_constraintLeft_toLeftOf="@+id/btt_map"
        app:layout_constraintRight_toRightOf="@+id/btt_map"
        app:layout_constraintTop_toTopOf="@+id/btt_map"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_map"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/map"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="@+id/imageView4"
        app:layout_constraintRight_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="RtlHardcoded"
        tools:textSize="@dimen/menu_item" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btt_votting"
        app:layout_constraintLeft_toLeftOf="@+id/btt_votting"
        app:layout_constraintRight_toRightOf="@+id/btt_votting"
        app:layout_constraintTop_toTopOf="@+id/btt_votting"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_votting"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/voting"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.89"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btt_contact"
        app:layout_constraintLeft_toLeftOf="@+id/btt_contact"
        app:layout_constraintRight_toRightOf="@+id/btt_contact"
        app:layout_constraintTop_toTopOf="@+id/btt_contact"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_contact"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/contact"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        tools:ignore="RtlHardcoded"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.939" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btt_speakers"
        app:layout_constraintLeft_toLeftOf="@+id/btt_speakers"
        app:layout_constraintRight_toRightOf="@+id/btt_speakers"
        app:layout_constraintTop_toTopOf="@+id/btt_speakers"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_speakers"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/speakers"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btt_agenda"
        app:layout_constraintLeft_toLeftOf="@+id/btt_agenda"
        app:layout_constraintRight_toRightOf="@+id/btt_agenda"
        app:layout_constraintTop_toTopOf="@+id/btt_agenda"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_agenda"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/agenda"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.089999974"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btt_welcome"
        app:layout_constraintLeft_toLeftOf="@+id/btt_welcome"
        app:layout_constraintRight_toRightOf="@+id/btt_welcome"
        app:layout_constraintTop_toTopOf="@+id/btt_welcome"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_welcome"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/welcome"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="@dimen/big_circle_radius"
        android:layout_height="@dimen/big_circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/circle"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:contentDescription="" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintLeft_toLeftOf="@+id/imageView12"
        app:layout_constraintRight_toRightOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/maintext"
        tools:ignore="ContentDescription,RtlHardcoded"
        app:layout_constraintHorizontal_bias="0.51"
        android:layout_height="108dp"
        android:layout_width="123dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/btt_gallery"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btt_gallery"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btt_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="@+id/btt_gallery"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btt_gallery"
        android:layout_width="@dimen/circle_radius"
        android:layout_height="@dimen/circle_radius"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/circle_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

</android.support.constraint.ConstraintLayout>
